# qwen2

./: .cspell.json  .dockerignore  .env.dev.example  .env.example  .env.prod.example  .flake8  .gitignore  .pre-commit-config.yaml  CLEANUP_SUMMARY.md  CONTRIBUTING.md  DependencyResolutionSummary.md  Dockerfile.api  Dockerfile.cuda  Makefile  PROJECT_SUMMARY.md  QUICK_COMMANDS.md  QUICK_SETUP.md  QUICK_START.md  README.md  SETUP.md  build-docker-api.ps1  build-docker-api.sh  clean_frontend.html  constraints.txt  core_requirements.txt  deploy-api.sh  dev-start.sh  dev-stop.sh  dev-test.sh  dev-ui.sh  dev_requirements.txt  docker-compose.api.yml  docker-compose.dev.yml  docker-compose.fullstack.yml  docker-compose.integration-test.yml  docker-compose.prod.yml  docker-compose.resource-optimized.yml  docker-compose.security.yml  docker-compose.simple.yml  docker-compose.traefik.prod.yml  (+41 more)
backend/: .flake8  launch.py  mypy.ini  pyproject.toml  requirements.txt
backend/configs/: default_config.yaml
backend/scripts/: README.md  activate.sh  error_detection.py  fix_common_issues.py  lint.sh  restart_enhanced.sh  setup_precommit.sh
backend/src/: main.py  qwen_image_config.py
backend/tools/: download_qwen_edit.py  download_qwen_edit_hub.py  emergency_device_fix.py  fix_download.py
config/: legacy_config.json  optimized_settings.json  ui_config.json  working_alternatives.json
configs/: default_config.yaml  quality_presets.yaml
docs/: CLEANUP_SUMMARY.md  CODE_QUALITY_SYSTEM.md  COMPREHENSIVE_UPDATES_SUMMARY.md  CONTROLNET_USAGE_GUIDE.md  CUDA_MEMORY_IMPLEMENTATION_PLAN.md  DAILY_WORKFLOW.md  DETAILED_CHANGES_LOG.md  DEVICE_ERROR_FIX.md  DEVICE_MAPPING_FIX.md  DIFFSYNTH_API_DOCUMENTATION.md  DIFFSYNTH_TROUBLESHOOTING_GUIDE.md  DIFFSYNTH_USER_GUIDE.md  DOCKER_API_README.md  DOCKER_COMMANDS_REFERENCE.md  DOCKER_DEPLOYMENT.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_DEPLOYMENT_README.md  DOCKER_IMPLEMENTATION_SUMMARY.md  DOCKER_SETUP.md  DOCKER_VOLUME_MANAGEMENT.md  DOWNLOAD_IMPROVEMENTS.md  DOWNLOAD_IMPROVEMENTS_EXECUTIVE_SUMMARY.md  ENHANCED_FEATURES.md  FASTAPI_REACT_DEPLOYMENT.md  FRONTEND_BACKEND_INTEGRATION_FIXES.md  GRADIO_FIX_DOCUMENTATION.md  HF_HUB_DOWNLOAD_IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  IMPROVEMENTS_SUMMARY_DOWNLOADS.md  LAUNCH_GUIDE.md  LAUNCH_SYSTEM_SUMMARY.md  MODEL_CACHING_FIX.md  MODEL_LOADING_FIX.md  MODERN_QWEN_ARCHITECTURE_GUIDE.md  MVP_CHECKLIST.md  NETWORK_AND_CACHING_FIXES.md  NETWORK_ISSUE_RESOLUTION.md  OFFICIAL_MODEL_INFO.md  PERFORMANCE_MONITOR_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  (+18 more)
examples/: architecture_optimization_examples.py  attention_optimization_demo.py  compatibility_layer_demo.py  config_management_demo.py  demo_model_download_manager.py  error_handling_demo.py  improvements_demo.py  multimodal_integration_demo.py  official_qwen_example.py  optimized_text_to_image_demo.py  performance_comparison_demo.py  performance_monitor_demo.py  performance_validation_demo.py  pipeline_optimizer_demo.py  pipeline_performance_integration.py  quick_gpu_test.py  quick_test.py  qwen2vl_integration_demo.py  qwen_edit_fast.py  qwen_edit_minimal.py  qwen_edit_optimized.py  qwen_edit_smoke.py  test_qwen2vl_integration.py  test_qwen2vl_simple.py  test_sd_speed.py
frontend/: .dockerignore  .env.development  .env.production  .env.staging  .pnp.cjs  BUILD_ENVIRONMENTS.md  BUILD_TROUBLESHOOTING.md  BUILD_VALIDATION_README.md  BUILD_VARIANTS.md  CONTAINER_COMMUNICATION.md  DOCKER_BUILD_IMPROVEMENTS.md  DOCKER_BUILD_OPTIMIZATION.md  Dockerfile  Dockerfile.dev  Dockerfile.integration  Dockerfile.prod  Dockerfile.simple  api_error.html  automated-build-test.js  build-docker.sh  build-optimization.config.js  build-optimized.sh  build-validation-report.json  build-validation.js  build-workaround.js  docker-build-test.js  docker-compose.dev.yml  docker-compose.optimized.yml  docker-compose.staging.yml  health-check.js  nginx-security.conf  nginx.conf  nginx.dev.conf  nginx.integration.conf  nginx.prod.conf  nginx.simple.conf  nginx.staging.conf  package-lock.json  package.json  package.json.backup  (+13 more)
monitoring/: prometheus.yml
reports/: error_detection_report.json
scripts/: README.md  activate.sh  deploy-dev.sh  deploy-docker.ps1  deploy-docker.sh  deploy-prod.sh  deploy-with-resource-management.sh  deploy.sh  disk-space-monitor.sh  docker-test-local.sh  error_detection.py  fix-frontend.sh  fix-react-frontend.sh  fix_common_issues.py  (+32 more)
(+263 files in other folders)
